Revise README with chosen design patterns and updated UML Diagrams
Updated README.md with detailed project overview, features, system architecture, UML diagrams, database design, technologies used, installation guide, project structure, Java serialization, SOLID principles, future improvements, and author information.